# iS3D

./: .gitignore  CMakeLists.txt  runCPU.sh
src/cpp/: CMakeLists.txt  readindata.h
